# github-events-analyzer-poc

./: .airflowignore  .gitignore  README.md
.github/workflows/: publish.yml
airflow/: Dockerfile  pyproject.toml
airflow/dags/: github_archive_dag.py  simple-etl.py  simple_demo.py  utils.py
event-producer/: config.py  main.py  pyproject.toml
gh_archive_flow/: Dockerfile
gh_archive_flow/dags/: github_archive_dag.py
k8s/: kafka-cluster.yaml
sparkjob/: .dockerignore  Dockerfile  README.md  etl.py  main.py  pyproject.toml  sparkapp.yaml
