[project]
name = "airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow==3.0.0",
    "apache-airflow-client>=3.1.3",
    "apache-airflow-providers-amazon>=9.6.1",
    "kafka-python>=2.3.0",
    "pendulum>=3.1.0",
    "requests>=2.31.0",
]
